
                  What's new in each version of Interchange
                       (since the version 5.8 branch)

          See UPGRADE document for a list of incompatible changes.

------------------------------------------------------------------------------

Interchange 5.10.0 not yet released.

Admin UI
--------

* Admin passwords encrypted with Bcrypt by default.


Strap Demo
----------

* New default demo catalog, based on Bootstrap Framework. See dist/strap/README for details.
* User passwords encrypted with Bcrypt by default.


Standard Demo
-------------

* The standard demo has been relegated to the annals of time. It can be obtained from previous Interchange versions.


External tool support
---------------------

* Add secure JSON query generation for interface with AJAX widgets. Allows generation of
  queries vetted by login, with either public access or access gated by session.


------------------------------------------------------------------------------


Interchange 5.8.2 released on 2014-07-07.

Core
----

* Fix some parsing issues with [PREFIX-next] and [PREFIX-last] which would on occasion cause looping tags to not be interpolated.

* Add MV_AUTOEND capability as a counterpart to MV_AUTOLOAD.

* Add [tv], [tn], and [ts] UserTags to support "true" temporary values which avoid the use of $Scratch space.

* Add support for [if tmp foo] to support values set by the [ts] or [tn] tags.

* Allow DirectoryIndex to find index page in root pages/ dir.

* Correct [log type=error|debug] final newline behavior.

* Password-protect the pages/dump.html page as it could be a security leak.

* Add UserTag parameter "Underride" to allow promotion of custom usertags to core IC without errors.

* Fix bug with item attributes potentially migrating to other items when using the back button.

* Bug fixes/improvements to custom CookieName handling.


UserDB
------

* Add Bcrypt encryption option for UserDB passwords.


Admin UI
--------
