@@ -9,6 +9,11 @@
 @_UI_STD_HEAD_@
 <!-- ----- BEGIN REAL STUFF ----- -->
 
+[comment]
+    Originally located in pages/admin/
+    Considered a slight security risk, so not included by default
+[/comment]
+
 
 <FORM ACTION="[area @@MV_PAGE@@]">
 [form-session-id]
