@@ -14,6 +14,8 @@ Admin UI
 
 * Admin passwords encrypted with Bcrypt by default.
 
+* test_code page removed (deemed slight security risk). Copy in eg/ if needed.
+
 
 Strap Demo
 ----------
